crates/check_formatter/src/snapshots/formatter_syntax_error.snap
---
source: crates/check_formatter/src/diagnostics.rs
expression: content
---
example.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Syntax error.
  


