crates/check_formatter/src/snapshots/poor_layout.snap
---
source: crates/check_formatter/src/diagnostics.rs
expression: content
---
example.js format  INTERNAL  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Poor layout: The formatter wasn't able to pick a good layout for your document.
  
  ! This diagnostic was derived from an internal Check error. Potential bug, please report it if necessary.
  


